--- a/config/.env
+++ b/config/.env
@@ -7,3 +7,5 @@ DATABASE_USERNAME=postgres
 DATABASE_PASSWORD=unbreakable-password
 DATABASE_HOST=0.0.0.0
 DATABASE_PORT=5433
+
+SECRET_KEY=example_secret
